
version 0.11.0-pre12:
	* Fixed a funny bug with auto responses when queued messages
	  are enabled.
	* Redesigned the Font Options preference page
	* Improved Jabber chat support (it whispers now, too)
	* Zephyr can do Subscriptions now (thanks to nsanch)
	* Auto-recon plugin got reworked
	* Lots of clean-ups
	* Some new pixmaps (Thanks, DennisR).
	* Fixed a segfault in IRC (Thanks Sean Egan)

version 0.11.0-pre11 (04/30/2001):
	* Zephyr updates and additions, thanks Neil Sanchala (nsanch)
	* Jabber can send/accept chat invites (due to mid)
	* MSN has the option to notify you of new hotmail
	  messages
	* Fixed a problem with ADD requests in MSN
	* Fixed a small memory leak with MSN
	* Moved MSN's spammy debug output into debug_printf's
	* Can rename groups/buddies in the Edit Buddies pane
	  (thanks Neil Sanchala)
	* Some perl updates (thanks to Sean Egan)
	* IRC got the following slash commands:
	  op, deop, voice, devoice, mode, raw, quote, and kick (thanks
	  to Sean Egan)
	* MSN Properly handles URL decoding of 'friendly' names
	* Redesigned Preferences pages (design by DennisR)
	* Can select where tabs are for tabbed IM/Chat windows
	* Option to queue away messages while away
	* Jabber got good updates (from faceprint)
	* Oh yes, and Oscar works, yet again. (gee... that's what, 4
	  releases that have "fixed" it now?)

version 0.11.0-pre10 (04/13/2001):
	* Many, many bug fixes
	* Can choose to not send away auto-response (thanks phzzzt)
	* Uh... Oscar works? For now?
	* IRC Plugin can do whois (right click and info)
	* IRC Plugin got away message support
	* Gaim blist to WinAIM blt perl script (courtesy Andy Harrison)
	* Sound on buddy pounce (Thanks Andrew Echols)
	* Can view all group chats in one tabbed window (same keybindings
	  as for tabbed normal conversations)
	* More Protocol plugins:
		Zephyr (plugins/zephyr) (DON'T USE THIS unless you know
			what it is and why you'd want to use it)

version 0.11.0-pre9 (03/26/2001):