@@ -10,6 +10,8 @@ version 0.11.0-pre12:
 	* Lots of clean-ups
 	* Some new pixmaps (Thanks, DennisR).
 	* Fixed a segfault in IRC (Thanks Sean Egan)
+	* MSN can now change your 'friendly name' (Thanks for the
+	  packet logs, aechols)
 
 version 0.11.0-pre11 (04/30/2001):
 	* Zephyr updates and additions, thanks Neil Sanchala (nsanch)
